fixtures/semantic/invalid/recovery/broken-type.php
<?php
function recovery_broken_type(?): void
{
    return;
}
